# genetics-simulator

./: README.md  brain.py  config.py  pyproject.toml  simulation.py
