[tool.poetry]
name = "genetics-simulator"
version = "0.1.0"
description = "Fun genetics simulation for experimenting and playing with different artificial \"life\" visualisations"
authors = ["DuneRaccoon <benjamincsherro@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
tk-tools = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
